--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
     <div>
         <nav class="home-nav">
                 <input type="text" placeholder="search">
-                <a class="link-nav" href="index.html">home</a>
-                <a class="link-nav" href="login.html">login</a>
-                <a class="link-nav" href="store.html">store</a>
-                <a class="link-nav" href="account.html">account</a>
+                <a class="home-nav-link" href="index.html">home</a>
+                <a class="home-nav-link" href="login.html">login</a>
         </nav>      
     </div>
 </body>
