--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
 <body>
     <div class="login">
         <div class="login-cont">
-            <h1 class="login-title">login</h1>
+            <h1 class="login-title">Login</h1>
             <form class="login-form" action="index.html" method="post">
                 <input class="login-input" type="text" placeholder="user">
                 <input class="login-input" type="password" placeholder="password">
