--- a/login.html
+++ b/login.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina Web</title>
+    <title>login</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="https://cryptologos.cc/logos/fantom-ftm-logo.png?v=025">
+    <link rel="icon" href="https://cryptologos.cc/logos/fantom-ftm-logo.png">
 </head>
 <body>
     <div class="login">
         <div class="login-cont">
+            <form class="login-form" action="index.html" method="post">
+                <h1 class="login-title">login</h1>
             <h1 class="login-title">Login</h1>
             <form class="login-form" action="index.html" method="post">
                 <input class="login-input" type="text" placeholder="user">
