--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 </head>
 <body>
     <nav class="home-nav">
-        <img class="home-img" src="https://cryptologos.cc/logos/fantom-ftm-logo.png" alt="icon">
+        <img class="home-logo" src="https://cryptologos.cc/logos/fantom-ftm-logo.png" alt="icon">
         <a class="home-link" href="index.html">Home</a>
         <a class="home-link" href="login.html">login</a>
     </nav>
     <section class="home-content">
         <div class="home-content-div">
-            <h1>Cómo usar la propiedad de posición en CSS</h1> 
+            <h1 class="home-title">Cómo usar la propiedad de posición en CSS</h1>
+            <img class="home-img" src="Surces/Imagen.png" alt="">
             <p class="home-texto">
                 La propiedad position en CSS se utiliza para controlar la posición y el diseño de un elemento en una página web. Define cómo se coloca un elemento en relación con su contexto y otros elementos circundantes.
 
@@ -26,42 +27,31 @@
 
                 En resumen, la propiedad position en CSS te permite controlar dónde y cómo se muestra un elemento en una página web, permitiéndote crear diseños y estructuras personalizadas. 
             </p>
-            <h3><li>Position: static;</li></h3>
+            <h2 class="home-subtitle">Tipos de Position:</h2>
+            <h3 class="home-subtitle-types">Static</h3>
             <p class="home-texto">
                 El valor static es el comportamiento predeterminado para todos los elementos. Un elemento con position: static se coloca en su posición normal en el flujo del documento. No se ve afectado por las propiedades de posicionamiento y no se pueden utilizar las propiedades top, right, bottom o left para ajustar su posición.
             </p>
-            <h3><li>Position: relative;</li></h3>
+            <h3 class="home-subtitle-types">Relative</h3>
             <p class="home-texto">
                 Cuando se establece position: relative en un elemento, se posiciona de forma relativa a su posición original en el flujo del documento. Puedes utilizar las propiedades top, right, bottom y left para ajustar su posición en relación con sí mismo. La posición relativa no afecta a otros elementos circundantes, lo que significa que los elementos vecinos seguirán ocupando su espacio original incluso si mueves el elemento con position: relative.
             </p>
-            <h3><li>Position: absolute;</li></h3>
+            <h3 class="home-subtitle-types">Absolute</h3>
             <p class="home-texto">
                 El valor absolute posiciona un elemento de forma absoluta en relación con su elemento padre más cercano que tenga una posición diferente a static. Se utiliza la propiedad top, right, bottom y left para definir su posición exacta en relación con su contenedor padre. Un elemento con position: absolute se elimina del flujo normal del documento, lo que significa que no ocupa espacio en el diseño y puede superponerse a otros elementos.
             </p>
-            <h3><li>Position: fixed;</li></h3>
+            <h3 class="home-subtitle-types">Fixed</h3>
             <p class="home-texto">
                 Cuando un elemento tiene position: fixed, se posiciona de forma fija en relación con la ventana del navegador, lo que significa que permanecerá en la misma posición incluso cuando se desplace la página. Se utiliza para crear elementos que se mantienen en una ubicación específica de la ventana, como un encabezado o un menú de navegación persistente. Al igual que absolute, un elemento con position: fixed se elimina del flujo normal del documento y no ocupa espacio en el diseño.
             </p>
-            <h3><li>Position: sticky;</li></h3>
+            <h3 class="home-subtitle-types">Sticky</h3>
             <p class="home-texto">
                 El valor sticky permite que un elemento se comporte como relative hasta que alcance una posición de desplazamiento específica, momento en el cual se vuelve fixed y se mantiene en esa posición mientras se desplaza la página. Puedes usar las propiedades top, right, bottom y left para ajustar la posición cuando está "pegajoso". Es especialmente útil para encabezados de tablas o barras de navegación que se fijan en la parte superior de la ventana cuando se desplaza.
             </p>
+            <iframe class="home-video" src="https://www.youtube.com/embed/BVIdzytAtkg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
     </section>
     <footer class="home-footer">
-        <p>todos los derechos reservados</p>
-        <p>La Ceja Antioquia Colombia</p>
+        <p class="home-footer-texto">© todos los derechos reservados</p>
+        <p class="home-footer-texto">La Ceja Antioquia Colombia</p>
     </footer>
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div>
-        <nav class="home-nav">
-                <input type="text" placeholder="search">
-                <a class="home-nav-link" href="index.html">home</a>
-                <a class="home-nav-link" href="login.html">login</a>
-        </nav>      
-    </div>
-</body>
-</html>
