--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 </head>
 <body>
     <nav class="home-nav">
-        <img class="home-logo" src="https://cryptologos.cc/logos/fantom-ftm-logo.png" alt="icon">
+        <img class="home-logo" src="https://cryptologos.cc/logos/fantom-ftm-logo.png">
         <a class="home-link" href="index.html">Home</a>
         <a class="home-link" href="login.html">login</a>
     </nav>
     <section class="home-content">
         <div class="home-content-div">
             <h1 class="home-title">Cómo usar la propiedad de posición en CSS</h1>
-            <img class="home-img" src="Surces/Imagen.png" alt="">
+            <img class="home-img" src="Surces/Imagen.png">
             <p class="home-texto">
                 La propiedad position en CSS se utiliza para controlar la posición y el diseño de un elemento en una página web. Define cómo se coloca un elemento en relación con su contexto y otros elementos circundantes.
 
